<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.CreateAccountActivity">

    <EditText
        android:id="@+id/verifyPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Verify Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasword" />

    <EditText
        android:id="@+id/inputPasword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <TextView
        android:id="@+id/addItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/createAcctMsg"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/nameText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/itemCreate"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="createAccount"
        android:text="@string/itemCreateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isAdmin" />

    <CheckBox
        android:id="@+id/isAdmin"
        android:layout_width="129dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="Is Admin"
        android:textColor="?attr/colorOnBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>