...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItemWelcomeMessage" />

    <Button
        android:id="@+id/AddStock"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="addStock"
...
        android:layout_marginEnd="32dp"
        android:onClick="viewTransactions"
        android:text="View Item Report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RemoveStock" />

    <Button
        android:id="@+id/RemoveStock"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
...
